--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -3,10 +3,10 @@
 
     </head>
     <body style="margin: 0; padding: 0">
-        <header style="color:red; height: 70px; width:100%">
+        <header style="background-color:red; height: 70px; width:100%">
 
         </header>
-        <footer style="color:green; height: 60px; width: 100%; text-align:center; position:absolute; line-height:60px; bottom:0">
+        <footer style="background-color:green; height: 60px; width: 100%; text-align:center; position:absolute; line-height:60px; bottom:0">
             Best School
         </footer>
 
